--- a/html/servircos.html
+++ b/html/servircos.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Multi Corretora</title>
-    <link href="./assets/reset.css" rel="stylesheet">
-    <link href="./assets/normalize.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/home.css" rel="stylesheet">
-   <link href="./css/cabecalho.css" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Multi Corretora</title>
+        <link href="../assets/reset.css" rel="stylesheet">
+        <link href="../assets/normalize.css" rel="stylesheet">
+        <link href="../css/style.css" rel="stylesheet">
+        <link href="../css/home.css" rel="stylesheet">
+       <link href="../css/cabecalho.css" rel="stylesheet">
+    </head>
 
 
 <body class="app">
@@ -33,6 +33,6 @@
     
     
     <footer  class="rodape">rodape</footer>
-    <script src="./assets/js/fontawesome.all.min.js"></script>
+    <script src="../assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
