--- a/html/login.html
+++ b/html/login.html
@@ -24,7 +24,7 @@
                 
                 <label class="password" for="password">Password</label>
                 <input type="password" id="nomesbrenome" class="input-cabecalho" required placeholder="**-**-**-**">
-                <input onClick="window.location.href='http://127.0.0.1:5500/html/investimento.html'"
+                <input onClick="window.location.href='investimento.html'"
                   type="submit" value="Entrar"  class="Entrar" onecl>
              
             </form>
