--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -23,7 +23,7 @@
         <nav>
             <ul class="cabecalho__navegacao">
                 <li class="cabecalho__enviar___home" ><a href="index.html" >Home</a></li>
-               <li class="cabecalho__enviar___Servico"><a href="servircos.html">Serviço</a></li>
+
                <li class="cabecalho__enviar___Login"><a href="login.html">Login</a></li>
                
             </ul>
@@ -64,7 +64,7 @@
            
         </main>
 
-    <footer  class="rodape">rodape</footer>
+    <footer  class="rodape"></footer>
     <script src="../assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
