--- a/html/login.html
+++ b/html/login.html
@@ -34,8 +34,7 @@
         <nav>
             <ul class="cabecalho__navegacao">
                 <li class="cabecalho__enviar___home" ><a href="index.html" >Home</a></li>
-               <li class="cabecalho__enviar___Servico"><a href="servircos.html">Serviço</a></li>
-                <li class="cabecalho__enviar___cadastro"><a href="cadastro.html">Cadastre-se</a></li>
+               
             </ul>
          </nav>
          
@@ -62,7 +61,7 @@
             </div>
         </section></main>
 
-    <footer  class="rodape">rodape</footer>
+    <footer  class="rodape"></footer>
     <script src="../assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
